# murshid-ai

./: .gitignore
backend/: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  DATABASE_SESSIONS.md  Dockerfile  Dockerfile.worker  Makefile  docker-compose.yml  entrypoint.sh  pyproject.toml  readme.md  worker-entrypoint.sh
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_users.py  0d4ef7803de4_add_mindmap_data_and_drop_lecture_.py  371768c08d8e_change_user_id_to_uuid.py  81940abc8c98_add_exams_feature.py  9af4e2b3c1d0_expand_question_image_url.py  a49eb2fdd835_enlarge_lectures_status_column_for_.py  a71c2f4b6d10_add_exam_resolutions.py  a89e7929926c_add_category_duration_and_offset_fields_.py  b8f4b2a1c7d9_expand_question_objective_types.py  c86a6177613c_unify_lecture_topics_and_alerts_into_.py
backend/src/: config.py  database.py  main.py
backend/src/core/: celery.py  celery_async.py
backend/src/features/auth/: __init__.py  middleware.py  repository.py
backend/src/features/categories/: __init__.py  models.py  repository.py
backend/src/features/exams/: __init__.py  agents.py  models.py  repository.py  tasks.py
backend/src/features/files/: __init__.py
backend/src/features/lectures/: __init__.py  models.py  repository.py  tasks.py
backend/src/features/questions/: __init__.py  models.py  repository.py
backend/src/features/resolutions/: __init__.py  models.py  repository.py  tasks.py
backend/src/features/users/: __init__.py  models.py  repository.py
backend/src/shared/enums/: enums.py
backend/src/shared/middlewares/: permission.py
backend/src/shared/schemas/: http.py
backend/src/tests/: conftest.py
(+169 files in other folders)
